--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,8 @@ description: A new Flutter project.
 dependencies:
   flutter:
     sdk: flutter
+  intl: 0.15.6
+  datetime_picker_formfield: 0.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
