--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: passmaster_app
 description: A new Flutter project.
 
 dependencies:
+  http: ^0.11.3+16
   flutter:
     sdk: flutter
   intl: 0.15.6
