--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ dependencies:
     sdk: flutter
   intl: 0.15.6
   datetime_picker_formfield: 0.0.3
+  flutter_search_bar: 2.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
